--- a/index.html
+++ b/index.html
@@ -71,9 +71,12 @@
                 </div>
                 <!-- <img class="img-fluid" src="https://cdn.wallpaper.com/main/styles/responsive_770w_scale/s3/rorygardiner1434c_016_v2.jpg" alt="..." width="100%" /> -->
             </div>
-        </section>
-        <img class="img-fluid" src="https://cdn.wallpaper.com/main/styles/responsive_770w_scale/s3/rorygardiner1434c_016_v2.jpg" alt="..." width="100%" height="50px"/>
 
+            <video autoplay="" muted="" loop="" width="100%">
+                <source src="assets/videos/video_transicao_logos.mp4" type="video/mp4">
+            </video>
+        </section>
+        
         <!-- Pacotes para venda  -->
         <section class="pacotes-section bg-light" id="pacotes">
             <div class="container px-4 px-lg-5">
