--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" crossorigin="anonymous"></script>
 
+        <!-- Bootstrap CSS -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
         <!-- Personalização -->
@@ -70,11 +73,64 @@
                     </div>
                 </div>
                 <!-- <img class="img-fluid" src="https://cdn.wallpaper.com/main/styles/responsive_770w_scale/s3/rorygardiner1434c_016_v2.jpg" alt="..." width="100%" /> -->
+                <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="assets/img/carousel/1.jpg" class="d-block w-100">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="assets/img/carousel/2.jpg" class="d-block w-100">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="assets/img/carousel/3.jpg" class="d-block w-100">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="assets/img/carousel/4.jpg" class="d-block w-100">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="assets/img/carousel/5.jpg" class="d-block w-100">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="assets/img/carousel/6.jpg" class="d-block w-100">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="assets/img/carousel/7.jpg" class="d-block w-100">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="assets/img/carousel/8.jpg" class="d-block w-100">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="assets/img/carousel/9.jpg" class="d-block w-100">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="assets/img/carousel/10.jpg" class="d-block w-100">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="assets/img/carousel/11.jpg" class="d-block w-100">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="assets/img/carousel/12.jpg" class="d-block w-100">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="assets/img/carousel/13.jpg" class="d-block w-100">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="assets/img/carousel/14.jpg" class="d-block w-100">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="assets/img/carousel/15.jpg" class="d-block w-100">
+                        </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Next</span>
+                    </button>
+                </div>
             </div>
-
-            <video autoplay="" muted="" loop="" width="100%">
-                <source src="assets/videos/video_transicao_logos.mp4" type="video/mp4">
-            </video>
         </section>
         
         <!-- Pacotes para venda  -->
