mudando cor do botão de compra

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-lg-8">
-                        <h2 class="text-cinza-2 mb-4">Identidade Visual Personalizada</h2>                        
+                        <h3 class="text-cinza-2 mb-4">Identidade Visual Personalizada</h3>                        
                         <p class="text-black-50 text-size-14">
                             A pergunta é: <span class="destaque">Como você quer que sua marca seja vista?</span> Se preocupar com a identidade visual da sua marca é se preocupar em como as pessoas irão enxergá-la, verificando se ela está com um design profissional e bem elaborado.
                         </p>
@@ -134,10 +134,11 @@
                 </div>
             </div>
         </section>
-        
+
         <!-- Pacotes para venda  -->
-        <section class="pacotes-section bg-light" id="pacotes">
+        <section class="pacotes-section fundo-branco" id="pacotes">
             <div class="container px-4 px-lg-5">
+                <h4 class="mb-4 cor-text-idvisual">Pacotes Identidade Visual</h4> 
                 <!-- 1º pacote-->
                 <div class="row gx-0 mb-4 mb-lg-5 align-items-center">
                     <div class="col-xl-8 col-lg-7">
