Criando função de calculo de valor de pacotes

--- a/index.html
+++ b/index.html
@@ -186,8 +186,7 @@
                             <img src="assets/img/pacote_start.png" alt="..." style="width: 9rem;" />
                         </div>
                         <div class="col-7">
-                            <button type="button" class="btn btn-secondary btn-compra p-2" data-bs-toggle="modal"
-                                data-bs-target="#exampleModal" onclick="exibirPacoteIdvisualEscolhido('Pacote Start','190,00')">Adquirir Agora</button>
+                            <button type="button" class="btn btn-secondary btn-compra p-2" data-bs-toggle="modal" data-bs-target="#exampleModal" onclick="exibirPacoteIdvisualEscolhido('Pacote Start','199,00')">Adquirir Agora</button>
                         </div>
                     </div>
                 </div>
@@ -231,7 +230,7 @@
                             <img src="assets/img/pacote_card.png" alt="..." style="width: 9rem;" />
                         </div>
                         <div class="col-7">
-                            <button type="button" class="btn btn-secondary btn-compra p-2">Adquirir Agora</button>
+                            <button type="button" class="btn btn-secondary btn-compra p-2" data-bs-toggle="modal" data-bs-target="#exampleModal" onclick="exibirPacoteIdvisualEscolhido('Pacote Card','245,00')">Adquirir Agora</button>
                         </div>
                     </div>
                 </div>
@@ -275,7 +274,7 @@
                             <img src="assets/img/pacote_digital_card.png" alt="..." style="width: 9rem;" />
                         </div>
                         <div class="col-7">
-                            <button type="button" class="btn btn-secondary btn-compra p-2">Adquirir Agora</button>
+                            <button type="button" class="btn btn-secondary btn-compra p-2" data-bs-toggle="modal" data-bs-target="#exampleModal" onclick="exibirPacoteIdvisualEscolhido('Pacote Digital Card','255,00')">Adquirir Agora</button>
                         </div>
                     </div>
                 </div>
@@ -325,7 +324,7 @@
                             <img src="assets/img/pacote_rede_social.png" alt="..." style="width: 9rem;" />
                         </div>
                         <div class="col-7">
-                            <button type="button" class="btn btn-secondary btn-compra p-2">Adquirir Agora</button>
+                            <button type="button" class="btn btn-secondary btn-compra p-2" data-bs-toggle="modal" data-bs-target="#exampleModal" onclick="exibirPacoteIdvisualEscolhido('Pacote Rede Social','340,00')">Adquirir Agora</button>
                         </div>
                     </div>
                 </div>
@@ -381,7 +380,7 @@
                             <img src="assets/img/pacote_papelaria.png" alt="..." style="width: 9rem;" />
                         </div>
                         <div class="col-7">
-                            <button type="button" class="btn btn-secondary btn-compra p-2">Adquirir Agora</button>
+                            <button type="button" class="btn btn-secondary btn-compra p-2" data-bs-toggle="modal" data-bs-target="#exampleModal" onclick="exibirPacoteIdvisualEscolhido('Pacote Papelaria','500,00')">Adquirir Agora</button>
                         </div>
                     </div>
                 </div>
@@ -423,7 +422,7 @@
                     <div class="card h-100 border-0">
                         <img src="assets/img/10artes.png" class="card-img-top rounded-circle p-1 borda-circle-img" alt="...">
                         <div class="card-body">
-                            <button type="button" class="btn btn-secondary btn-compra p-2 px-3">R$150,00</button>
+                            <button type="button" class="btn btn-secondary btn-compra p-2 px-3" onclick="enviarMsgWhatsApp('Pacote escolhido Redes Sociais: 10 artes, R$150,00')">R$150,00</button>
                         </div>
                     </div>
                 </div>
@@ -432,7 +431,7 @@
                     <div class="card h-100 border-0">
                         <img src="assets/img/20artes.png" class="card-img-top rounded-circle p-1 borda-circle-img" alt="...">
                         <div class="card-body">
-                            <button type="button" class="btn btn-secondary btn-compra p-2 px-3">R$300,00</button>
+                            <button type="button" class="btn btn-secondary btn-compra p-2 px-3" onclick="enviarMsgWhatsApp('Pacote escolhido Redes Sociais: 20 artes, R$300,00')">R$300,00</button>
                         </div>
                     </div>
                 </div>
@@ -441,7 +440,7 @@
                     <div class="card h-100 border-0">
                         <img src="assets/img/30artes.png" class="card-img-top rounded-circle p-1 borda-circle-img" alt="...">
                         <div class="card-body">
-                            <button type="button" class="btn btn-secondary btn-compra p-2 px-3">R$450,00</button>
+                            <button type="button" class="btn btn-secondary btn-compra p-2 px-3" onclick="enviarMsgWhatsApp('Pacote escolhido Redes Sociais: 30 artes, R$450,00')">R$450,00</button>
                         </div>
                     </div>
                 </div>
@@ -450,7 +449,7 @@
                     <div class="card h-100 border-0">
                         <img src="assets/img/40artes.png" class="card-img-top rounded-circle p-1 borda-circle-img" alt="...">
                         <div class="card-body">
-                            <button type="button" class="btn btn-secondary btn-compra p-2 px-3">R$600,00</button>
+                            <button type="button" class="btn btn-secondary btn-compra p-2 px-3" onclick="enviarMsgWhatsApp('Pacote escolhido Redes Sociais: 40 artes, R$600,00')">R$600,00</button>
                         </div>
                     </div>
                 </div>
@@ -459,11 +458,10 @@
                     <div class="card h-100 border-0">
                         <img src="assets/img/50artes.png" class="card-img-top rounded-circle p-1 borda-circle-img" alt="...">
                         <div class="card-body">
-                            <button type="button" class="btn btn-secondary btn-compra p-2 px-3">R$750,00</button>
+                            <button type="button" class="btn btn-secondary btn-compra p-2 px-3" onclick="enviarMsgWhatsApp('Pacote escolhido Redes Sociais: 50 artes, R$750,00')">R$750,00</button>
                         </div>
                     </div>
                 </div>
-
                 
             </div>
         </div>
@@ -622,7 +620,7 @@
 
     <!-- Modal -->
     <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="modalCompraIdVisualLabel" aria-hidden="true">
-        <div class="modal-dialog">
+        <div class="modal-dialog modal-dialog-scrollable">
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title cor-text-idvisual" id="modalCompraIdVisualLabel">Escolher opcionais</h5>
@@ -634,7 +632,7 @@
                     <div class="list-group" id="listaOpcionaisPacotesIdVisual">
                         <label class="list-group-item d-flex justify-content-between align-items-center text-cinza-2 text-size-14">
                             <div>
-                                <input class="form-check-input me-1" type="checkbox" value="" onchange="lerQuantidade(this)">
+                                <input class="form-check-input me-1" type="checkbox" value="" onchange="teste(); lerQuantidade(this)">
                                 1 - Template Post Instagram (cada)
                             </div>
                             <span class="badge bg-primary rounded-pill">R$55</span>                            
@@ -646,7 +644,7 @@
                     <p class="text-size-12 text-cinza-2">Ao finalizar alguém te atenderá no WhatsApp.</p>
                 </div>
                 <div class="d-grid gap-2">
-                    <button class="btn btn-primary m-2 btn-compra p-2" type="button">Finalizar - (<span id="ValorTotalIdVisual"></span>)</button>
+                    <button class="btn btn-secondary m-2 btn-compra p-2" type="button" onclick="finalizarCompra()">Finalizar - (<span id="ValorTotalIdVisual"></span>)</button>
                 </div>
             </div>
         </div>
