--- a/index.html
+++ b/index.html
@@ -402,10 +402,9 @@
         <div class="container px-4 px-lg-5">
             
             <div class="row gx-4 gx-lg-5 justify-content-center text-center mb-4">
-                <div class="col-lg-8">
-                    <!-- <h3 class="text-cinza-2 mb-4">Sua página é sua vitrine. Ela está atrativa o suficiente? Gerando deseja e vendas?</h3> -->
+                <div class="col-lg-8">                    
                     <p class="text-black-50 text-size-14">
-                        <span class="destaque">Sua página é sua vitrine. Ela está atrativa o suficiente? Gerando deseja e vendas?</span>
+                        <span class="destaque">Sua página é sua vitrine. Ela está atrativa o suficiente? Gerando desejo e vendas?</span>
                     <p class="text-black-50 text-size-14">   
                         Agregue valor à sua marca com artes de qualidade e personalizadas para você. Todas as artes são elaboradas de acordo com a área de atuação e respeitando a identidade visual da marca.                    
                     </p>
@@ -641,7 +640,7 @@
                     <!-- _________________ -->
                 </div>                
                 <div class="modal-footer justify-content-start">                    
-                    <p class="text-size-12 text-cinza-2">Ao finalizar alguém te atenderá no WhatsApp.</p>
+                    <p class="text-size-12 text-cinza-2">Ao finalizar, alguém te atenderá no WhatsApp.</p>
                 </div>
                 <div class="d-grid gap-2">
                     <button class="btn btn-secondary m-2 btn-compra p-2" type="button" onclick="finalizarCompra()">Finalizar - (<span id="ValorTotalIdVisual"></span>)</button>
