Add meta tag description

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <meta name="description" content="" />
+    <meta name="description" content="Logotipo, identidade visual, marcas empreendedores, empreendedorismo, identidade visual personalizada, design gráfico, designer gráfico, design demarcas, logomarca, marca personalizada, cartão de visita, cartão de visita digital, cartão digital, cartão digital interativo" />
     <meta name="author" content="Drawbe - Design de Marcas" />
     <title>Drawbe - Design de Marcas</title>
     <link rel="icon" type="image/x-icon" href="assets/img/iniciais_2.png" />
