Alterando id indexador

--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
     <link href="css/styles2.css" rel="stylesheet" />
 </head>
 
-<body id="page-top">
+<body id="DrawBe">
     <!-- Menu de navegação -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
         <div class="container px-4 px-lg-5">
-            <a class="navbar-brand" href="#page-top">Drawbe</a>
+            <a class="navbar-brand" href="#DrawBe">Drawbe</a>
             <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -35,9 +35,9 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="#idVisual">Identidade Visual</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#identidade-visual">Identidade Visual</a></li>
                     <!-- <li class="nav-item"><a class="nav-link" href="#pacotes">Pacotes</a></li> -->
-                    <li class="nav-item"><a class="nav-link" href="#redes">Redes Sociais</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#redes-sociais">Redes Sociais</a></li>
                     <li class="nav-item"><a class="nav-link" href="#projetos">Portfólio</a></li>
                     <li class="nav-item"><a class="nav-link" href="#contatos">Contato</a></li>
                 </ul>
@@ -63,7 +63,7 @@
 
 
     <!-- Apresentação sobre o que é identidade visual  -->
-    <section class="idvisual-section text-center" id="idVisual">
+    <section class="idvisual-section text-center" id="identidade-visual">
         <div class="container px-4 px-lg-5">
             <div class="row gx-4 gx-lg-5 justify-content-center">
                 <div class="col-lg-8">
@@ -112,7 +112,7 @@
     </section>
 
     <!-- Redes Sociais-->
-    <section class="redes-section fundo-branco pb-4 mb-1" id="redes">
+    <section class="redes-section fundo-branco pb-4 mb-1" id="redes-sociais">
 
         <div class="container px-4 px-lg-5">
             <h4 class="mb-4 cor-text-idvisual">Pacotes de Artes</h4>
