configurando tamanho de vídeo para diferentes dispositívos v3

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <header class="cabecalho">
         <!-- Vídeo incluído via Javascript -->
         <div id="video">
-            
+            <video autoplay="" muted="" loop="" width="100%"><source src="assets/videos/video_drawbe_celular.mp4" type="video/mp4"></video>
         </div>
         <!-- Apresentação do logo tipo sobre o vídeo -->
         <div class="apresentacao container px-4 px-lg-5 d-flex h-100 align-items-center justify-content-center">
