Adicionando rastreamento google Analytics

--- a/index.html
+++ b/index.html
@@ -295,6 +295,16 @@
     <!-- Core theme JS-->
     <script src="js/scripts.js"></script>
     <script src="js/acoes.js"></script>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-W3N967BB8Z"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-W3N967BB8Z');
+    </script>
    
 </body>
 
