--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <div class="apresentacao container px-4 px-lg-5 d-flex h-100 align-items-center justify-content-center">
             <div class="d-flex justify-content-center">
                 <div class="text-center">
-                    <img id="imgApresentacao" src="assets/img/logotipo_drawbe.png" alt="">
+                    <img id="imgApresentacao" src="assets/img/logotipo_drawbe.png" alt="">                    
                 </div>
             </div>
         </div>
@@ -64,19 +64,17 @@
 
     <!-- Apresentação sobre o que é identidade visual  -->
     <section class="idvisual-section text-center" id="identidade-visual">
-        <div class="container px-4 px-lg-5">
+        <div class="container px-4 px-lg-5 mb-4">
             <div class="row gx-4 gx-lg-5 justify-content-center">
                 <div class="col-lg-8">
-                    <h3 class="text-cinza-2 mb-4">Identidade Visual Personalizada</h3>
-                    <p class="text-black-50 text-size-14">
+                    <h3 class="text-cinza-2 mb-4">Elegante, Sofisticado, Leve, Minimalista e Moderno.</h3>
+                    <p class="text-black-50 text-size-16">
                         A pergunta é: <span class="destaque">Como você quer que sua marca seja vista?</span> Se
                         preocupar com a identidade visual da sua marca é se preocupar em como as pessoas irão
-                        enxergá-la, verificando se ela está com um design profissional e bem elaborado.
+                        enxergá-la, gerando desejo e tornando a sua marca irresistível.
                     </p>
-                    <p class="text-black-50 text-size-14">
-                        Trabalhamos com desenvolvimento de identidade visual personalizada para cada marca, para que se
-                        coloque no mercado de forma profissional e original. Para que seu negócio não seja apenas mais
-                        um, mas que ele se destaque no meio dos concorrentes.
+                    <p class="text-black-50 text-size-16">
+                        Transformamos pessoas e empresas comuns em marcas que se destacam de verdade.
                     </p>
                 </div>
             </div>
@@ -105,9 +103,11 @@
 
     <!-- Pacotes para venda  -->
     <section class="pacotes-section fundo-branco pb-4 mb-1" id="pacotes">
-        <div class="container px-4 px-lg-5" id="pacotesIdVisual">
+        <div class="container px-4 px-lg-5">
             <h4 class="mb-4 cor-text-idvisual">Pacotes Identidade Visual</h4>
-            <!-- package here, add by javascript -->
+            <div class="row mb-4 mb-lg-5" id="pacotesIdVisual">
+                <!-- package here, add by javascript -->
+            </div>            
         </div>
     </section>
 
@@ -126,12 +126,12 @@
             
             <div class="row gx-4 gx-lg-5 justify-content-center text-center mb-4">
                 <div class="col-lg-8">                    
-                    <p class="text-black-50 text-size-14">
+                    <p class="text-black-50 text-size-16">
                         <span class="destaque">Sua página é sua vitrine. Ela está atrativa o suficiente? Gerando desejo e vendas?</span>
-                    <p class="text-black-50 text-size-14">   
+                    <p class="text-black-50 text-size-16">   
                         Agregue valor à sua marca com artes de qualidade e personalizadas para você. Todas as artes são elaboradas de acordo com a área de atuação e respeitando a identidade visual da marca.                    
                     </p>
-                    <p class="text-black-50 text-size-14">
+                    <p class="text-black-50 text-size-16">
                         O tempo de entrega das artes dependerá do pacote escolhido.                  
                     </p>
                 </div>
