Testando url de desenvolvimento

--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
     </section>
     <!-- Footer-->
     <footer class="footer text-center text-cinza-2 pb-1">
-        <div class="container px-4 px-lg-5 text-size-10">Desenvolvido Por Eliton Camargo de Oliveira - &copy; Drawbe. 2022</div> 
+        <div class="container px-4 px-lg-5 text-size-10">Desenvolvido Por Eliton Camargo - &copy; Drawbe. 2022</div> 
     </footer>
 
     <!-- Modal Comprar Identidade Visual -->
