Substituindo vídeo de cabeçalho por imagem

--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
         </div>
     </nav>
     
-    <!-- Cabeçalho (vídeo e logo tipo)-->
     <header class="cabecalho">
-        <!-- Vídeo incluído via Javascript -->
-        <div id="video">
-            <video autoplay="" muted="" loop="" width="100%"><source src="assets/videos/video_drawbe_celular.mp4" type="video/mp4"></video>
+        <div id="video"> <picture id="picture_capa">
+                <source media="(min-width: 992px)" srcset="assets/img/capa/capacomputador.jpg">
+                <source media="(min-width: 576px)" srcset="assets/img/capa/capatablet1.jpg">
+                <img src="assets/img/capa/capacelular1.jpg" style="width:100%;">
+            </picture>
         </div>
-        <!-- Apresentação do logo tipo sobre o vídeo -->
         <div class="apresentacao container px-4 px-lg-5 d-flex h-100 align-items-center justify-content-center">
             <div class="d-flex justify-content-center">
                 <div class="text-center">
